2008-06-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/gchecksum.h: Add docs.

2008-06-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 538119 – glib's mainloop leaks a pipe to sub-processes

	* glib/gmain.c (g_main_context_init_pipe): Don't leak the
	pipes to child processes. Patch by Thiago Macieira.

2008-06-13  Hans Breuer  <hans@breuer.org>

	* glib/gstrfuncs.c : to get the default translation target on
	win32 use g_win32_get_locale() instead of setlocale(LS_MESSAGES,NULL)
	Fixes bug #538044

	* glib/makefile.msc.in gio/makefile.msc : updated

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version
	
	* === Released 2.17.2 ===

	* configure.in: Fix LINGUAS conversion

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.17.1 ===

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtestutils.c: Documentation fixups

2008-06-11  Matthias Clasen  <mclasen@redhat.com>

	* glib/glist.c: Tiny doc fix

2008-06-11  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-06-11  Behdad Esfahbod  <behdad@gnome.org>

	Bug 503071 – Application direction changes to right to left even if
	theres no translation

	* glib/gi18n-lib.h:
	* glib/glib.symbols:
	* glib/gstrfuncs.h:
	* glib/gstrfuncs.c:
	Add new functions g_dgettext() and g_dngettext().

	* glib/gutils.c (glib_gettext):
	* glib/gfileutils.c (g_format_size_for_display):
	* glib/goption.c (dgettext_swapped):
	Use the new functions.

2008-06-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 502511 – g_assert_cmphex prints invalid message

	* glib/gtestutils.c (g_assertion_message_cmpnum): Actually print
	hex numbers in hex. 
	Pointed out by Tor Lillqvist

2008-06-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 338162 – [PATCH] Use po/LINGUAS

	* po/LINGUAS: New file
	* po/Makefile.in.in: Dist LINGUAS
	* configure.in: Use po/LINUAS
	Patch by Thomas Andersen

2008-06-11  Matthias Clasen  <mclasen@redhat.com>
